La conscience actuelle ne peut être supérieur au max

--- a/templates/eminence/partials/conscience.hbs
+++ b/templates/eminence/partials/conscience.hbs
@@ -13,11 +13,11 @@
       {{else}}
           <div class="form-group">
             <label>{{localize "PENOMBRE.ui.conscienceVal"}}</label>
-            <div class="form-fields">{{systemSource.conscience.valeur}}</div>
+            <div class="form-fields">{{system.conscience.valeur}}</div>
           </div>
           <div class="form-group">
             <label>{{localize "PENOMBRE.ui.conscienceMax"}}</label>
-            <div class="form-fields">{{systemSource.conscience.max}}</div>
+            <div class="form-fields">{{system.conscience.max}}</div>
           </div>
       {{/if}}
 
