--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -1,107 +1,94 @@
 .penombre-roll-dialog {
-  display : table;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
 
   .line-1 {
-    width: 100%;
-    float: left;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: space-between;
 
     .part-left-1 {
-      width: 275px;
-      float: left;
-
       fieldset {
-        display: table;
-        float: left;
-        width: 100%;
+        .harmonique {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          label {
+            font-family: "CattedraleDemo";
+            font-size: 1.8rem;
+            width: 140px;
+            padding-right: 10px;
+          }
+
+          input {
+            width: 40px;
+          }
+        }
+        .deMerveilleux {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+      }
+    }
+
+    .part-right-1 {
+      display: flex;
+      flex-direction: column;
+      .difficulte {
+        margin: 0 4px 10px 0;
+      }
+      fieldset {
+        padding: 5px;
+      }
+      .options {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        input {
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+
+  .line-2 {
+    fieldset {
+      padding-top: 0;
+
+      .atouts {
+        overflow-y: auto;
+
+        .atout {
+          margin-top: 5px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          &.checked {
+            background-color: @color-accent;
+            color: white;
+          }
+        }
+      }
+
+      .bonus-total {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
 
         label {
-          float: left;
-          width: 195px;
+          margin-right: 10px;
         }
 
         input {
           text-align: center;
-          float: left;
           width: 40px;
-
         }
-
-        .clearboth {
-          clear: both;
-
-          #deMerveilleux {
-            width: 20px;
-          }
-
-          label {
-            width: 80px;
-          }
-        }
-
-        #formule {
-          text-align: left;
-          width: 230px;
-        }
-      }
-
-    }
-
-    .part-right-1 {
-      margin-left: 285px;
-      width: calc(100% - 285px);
-    }
-
-  }
-
-
-  .line-2 {
-    display: table;
-    clear: both;
-    width: 100%;
-
-    .defile-div {
-      border: solid;
-      border-width: 0.5px;
-      border-color: gray;
-      overflow-y: auto;
-      height: 125px;
-
-      .atout.checked {
-        background-color: @color-accent;
-        color: white;
-      }
-
-      .atoutdata {
-        float: left;
-        width: 100%;
-
-        .nom {
-          width: 450px;
-          float: left;
-        }
-
-        .level {
-          margin-left: 454px;
-          width: calc(100% - 454px);
-        }
-      }
-    }
-
-    .bonustotal {
-      float: left;
-      width: 100%;
-
-      label {
-        margin-left: 250px;
-        width: 235px;
-        float: left;
-      }
-
-      input {
-        text-align: center;
-        float: left;
-        width: 40px;
       }
     }
   }
@@ -129,7 +116,6 @@
       .rollMode {
         width: calc(100% - 10px);
       }
-
     }
 
     .part-right-3 {
@@ -158,5 +144,4 @@
       }
     }
   }
-
 }
