--- a/styles/chat.less
+++ b/styles/chat.less
@@ -58,34 +58,27 @@
           }
         }
         .dice-tooltip .dice-rolls .roll {
-          min-width: 48px;
-          line-height: 48px;
+          background-image: none;
         }
         li.roll.harmonique.die {
-          background-image: url(/systems/penombre/assets/ui/d6-vierge.png);
-          background-size: contain;
-          &.d4 {
-            background-image: url(/systems/penombre/assets/ui/d4-vierge.png);
+          width: 48px;
+          height: 48px;
+          &.max {
+            filter: sepia(0.9) hue-rotate(10deg) saturate(0.8) brightness(0.85);
           }
-          &.d6 {
-            background-image: url(/systems/penombre/assets/ui/d6-vierge.png);
-          }
-          &.d8 {
-            background-image: url(/systems/penombre/assets/ui/d8-vierge.png);
-          }
-          &.d10 {
-            background-image: url(/systems/penombre/assets/ui/d10-vierge.png);
-          }
-          &.d12 {
-            background-image: url(/systems/penombre/assets/ui/d12-vierge.png);
-          }
-          &.d20 {
-            background-image: url(/systems/penombre/assets/ui/d20-vierge.png);
+          &.min {
+            filter: sepia(0.7) hue-rotate(-20deg) saturate(2) brightness(1);
           }
         }
         li.roll.atout.die {
-          background-image: url(/systems/penombre/assets/ui/d6-vierge.png);
-          background-size: contain;
+          width: 48px;
+          height: 48px;
+          &.max {
+            filter: none;
+          }
+          &.min {
+            filter: none;
+          }
         }
       }
     }
