--- a/templates/dialogs/roll-dialog.hbs
+++ b/templates/dialogs/roll-dialog.hbs
@@ -1,4 +1,4 @@
-{{log "roll-dialog" this}}
+{{!log "roll-dialog" this}}
 <div class="penombre-roll-dialog" data-actor-id="{{actor.id}}">
 
   <div class="line-1">
