--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -369,7 +369,7 @@ body {
 }
 
 .penombre {
-/* ---------------------------------------------
+  /* ---------------------------------------------
         Eminence
 --------------------------------------------- */
   &.eminence {
@@ -485,7 +485,10 @@ body {
 
           .logo-img {
             border-radius: @border-radius;
-            width: 150px;
+            height: 150px;
+            width: auto;
+            max-width: 100%;
+            display: block;
           }
         }
 
@@ -1152,7 +1155,6 @@ body {
               width: 70px;
               font-size: @font-size-base;
             }
-
           }
 
           .maitrises-2 {
@@ -1179,7 +1181,6 @@ body {
               width: 70px;
               font-size: @font-size-base;
             }
-
           }
         }
       }
