Action  collégiale : prise en compte dans le coût en jetons

--- a/templates/chat/harmonique-roll.hbs
+++ b/templates/chat/harmonique-roll.hbs
@@ -1,4 +1,4 @@
-{{!log 'chat harmonique-roll' this}}
+{{log 'chat harmonique-roll' this}}
 <div class="dice-roll penombre">
   Jet d'harmonique {{localize (concat 'PENOMBRE.ui.' harmonique)}} <br>
   {{#if hasDifficulte}}
