--- a/templates/dialogs/roll-dialog.hbs
+++ b/templates/dialogs/roll-dialog.hbs
@@ -28,8 +28,8 @@
       </div>
       <fieldset>
         <div class="options">
-          <input type="checkbox" name="actionCollegiale" /><label>Action collégiale</label>
-          <input type="checkbox" name="effetMagique" /><label>Effet magique</label>
+          <input type="checkbox" name="actionCollegiale" id="actionCollegiale"/><label>Action collégiale</label>
+          <input type="checkbox" name="effetMagique" id="effetMagique"/><label>Effet magique</label>
         </div>
       </fieldset>
     </div>
