Relance : un bouton pour chaque réserve + ajout de la notification sur le nombre de jetons

--- a/styles/chat.less
+++ b/styles/chat.less
@@ -62,7 +62,10 @@
               display: flex;
               align-items: center;
               justify-content: center;
-              .reroll.hidden {
+              .reroll-conscience.hidden {
+                display: none;
+              }
+              .reroll-reserve.hidden {
                 display: none;
               }
             }
