--- a/templates/chat/dice-tooltip.hbs
+++ b/templates/chat/dice-tooltip.hbs
@@ -27,7 +27,8 @@
             </section>
       {{/each}}
     <div class="reroll-container">
-      <button class="reroll hidden">Relancer les dés sélectionnés</button>
+      <button class="reroll-conscience hidden">Relance (Conscience)</button>
+      <button class="reroll-reserve hidden">Relance (Réserve)</button>
     </div>
   </div>
 {{/if}}
